# aqueduct

./: CLAUDE.md  Cargo.toml  DESIGN.md
crates/aqueduct-core/: Cargo.toml
crates/aqueduct-core/src/: compiler.rs  error.rs  graph.rs  lib.rs  node.rs  patch.rs  pin_store.rs  registry.rs  runtime.rs
crates/aqueduct-core/tests/: step1.rs
crates/aqueduct-nodes/: Cargo.toml
crates/aqueduct-nodes/src/: convert.rs  lib.rs  logic.rs  math.rs  string.rs  time.rs
crates/aqueduct-nodes/tests/: builtin_nodes.rs
crates/aqueduct-protocol/: Cargo.toml
crates/aqueduct-protocol/src/: lib.rs
crates/aqueduct-server/: Cargo.toml
crates/aqueduct-server-tauri/: Cargo.toml
crates/aqueduct-server-tauri/src/: commands.rs  lib.rs  push.rs
crates/aqueduct-server-ws/: Cargo.toml
crates/aqueduct-server-ws/src/: lib.rs
crates/aqueduct-server/src/: dispatcher.rs  lib.rs  server_loop.rs  session.rs  transport.rs
crates/aqueduct-server/tests/: step3.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/: CustomNode.tsx  NodeEditor.tsx  Palette.tsx  PinValueOverlay.tsx  PropertyPanel.tsx  RuntimeControls.tsx  mode-toggle.tsx  theme-provider.tsx
frontend/src/hooks/: useGraphSync.ts  useTransport.ts
frontend/src/lib/: category-colors.ts
frontend/src/protocol/: tauri.ts  transport.ts  websocket.ts
frontend/src/stores/: graphStore.ts  pinStore.ts
