[workspace]
members = [
    "crates/aqueduct-protocol",
    "crates/aqueduct-core",
    "crates/aqueduct-nodes",
    "crates/aqueduct-server",
    "crates/aqueduct-server-ws",
    "crates/aqueduct-server-tauri",
]
exclude = ["frontend/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
rust-version = "1.77"
