[package]
name = "aqueduct-server-ws"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
aqueduct-core = { path = "../aqueduct-core" }
aqueduct-protocol = { path = "../aqueduct-protocol" }
aqueduct-server = { path = "../aqueduct-server" }
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "sync", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
