[package]
name = "aqueduct-tauri"
version = "0.1.0"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aqueduct-server-tauri = { path = "../../crates/aqueduct-server-tauri" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
